@@ -80,6 +80,8 @@ class IndexView(
     search_fields = None
     is_searchable = None
     search_kwarg = "q"
+    filters = None
+    filterset_class = None
     table_class = Table
 
     def setup(self, request, *args, **kwargs):
@@ -128,7 +130,7 @@ class IndexView(
         )
 
     def get_queryset(self):
-        queryset = super().get_queryset()
+        self.filters, queryset = self.filter_queryset(super().get_queryset())
 
         if self.locale:
             queryset = queryset.filter(locale=self.locale)
@@ -140,20 +142,6 @@ class IndexView(
         # (to ensure pagination is consistent)
         if not queryset.ordered:
             queryset = queryset.order_by("pk")
-
-        # Search
-        if self.search_query:
-            if class_is_indexed(queryset.model):
-                search_backend = get_search_backend()
-                queryset = search_backend.search(
-                    self.search_query, queryset, fields=self.search_fields
-                )
-            else:
-                filters = {
-                    field + "__icontains": self.search_query
-                    for field in self.search_fields or []
-                }
-                queryset = queryset.filter(**filters)
 
         return queryset
 
@@ -168,6 +156,35 @@ class IndexView(
         page_number = self.request.GET.get(self.page_kwarg)
         page = paginator.get_page(page_number)
         return (paginator, page, page.object_list, page.has_other_pages())
+
+    def filter_queryset(self, queryset):
+        # construct filter instance (self.filters) if not created already
+        if self.filterset_class and self.filters is None:
+            self.filters = self.filterset_class(
+                self.request.GET, queryset=queryset, request=self.request
+            )
+            queryset = self.filters.qs
+        elif self.filters:
+            # if filter object was created on a previous filter_queryset call, re-use it
+            queryset = self.filters.filter_queryset(queryset)
+
+        return self.filters, queryset
+
+    def search_queryset(self, queryset):
+        if not self.search_query:
+            return queryset
+
+        if class_is_indexed(queryset.model):
+            search_backend = get_search_backend()
+            return search_backend.search(
+                self.search_query, queryset, fields=self.search_fields
+            )
+
+        filters = {
+            field + "__icontains": self.search_query
+            for field in self.search_fields or []
+        }
+        return queryset.filter(**filters)
 
     def get_columns(self):
         try:
@@ -208,8 +225,12 @@ class IndexView(
             ordering = self.default_ordering
         return ordering
 
-    def get_context_data(self, **kwargs):
-        context = super().get_context_data(**kwargs)
+    def get_context_data(self, *args, object_list=None, **kwargs):
+        queryset = object_list if object_list is not None else self.object_list
+        queryset = self.search_queryset(queryset)
+
+        context = super().get_context_data(*args, object_list=queryset, **kwargs)
+
         index_url = self.get_index_url()
         table = self.table_class(
             self.columns,
@@ -225,6 +246,12 @@ class IndexView(
         if context["can_add"]:
             context["add_url"] = self.get_add_url()
             context["add_item_label"] = self.add_item_label
+
+        if self.filters:
+            context["filters"] = self.filters
+            context["is_filtering"] = any(
+                self.request.GET.get(f) for f in set(self.filters.get_fields())
+            )
 
         context["table"] = table
         context["media"] = table.media
